security_group.tf
resource "aws_security_group" "jenkins_master" {
  name = "${var.name}"
  description = "Allows all traffic"

  vpc_id = "${aws_vpc.vpc.id}"

  # SSH
  ingress {
    from_port = 22
    to_port = 22
    protocol = "tcp"
    cidr_blocks = ["${var.ssh_cidrs}"]
  }

  # HTTP, for redirecting to HTTPS
  ingress {
    from_port = 80
    to_port = 80
    protocol = "tcp"
    cidr_blocks = ["${var.http_cidrs}"]
  }

  # HTTPS
  ingress {
    from_port = 443
    to_port = 443
    protocol = "tcp"
    cidr_blocks = ["${var.http_cidrs}"]
  }

  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
